# homomorphic_enc

./: Cargo.toml  README.md  build.rs  runscript.sh
proto/: encryption.proto
src/: lib.rs  main.rs
