[package]
name = "homomorphic_enc"
version = "0.1.0"
edition = "2024"

[dependencies]
cc = "1.2.22"
cxx = "1.0"
tonic = "0.13.1"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
#openfhe = "0.2.0"
openfhe = {path = "/Users/peterwinzell/RustroverProjects/openfhe-rs"}
[build-dependencies]
cxx-build = "1.0"
tonic-build = "0.13.1"

